add nice adoption page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
       routerLink="/adopt"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Adopta</a
+      >Adopta Virtual</a
     >
     <a
       mat-button
