--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -92,7 +92,7 @@
             <li><a routerLink="/">Acasa</a></li>
             <li><a routerLink="/our-story">Povestea</a></li>
             <li><a routerLink="/animals">Rezidentii</a></li>
-            <li><a routerLink="/adopt">Adopta</a></li>
+            <li><a routerLink="/adopt">Adopta Virtual</a></li>
             <li><a routerLink="/donate">Doneaza</a></li>
             <li><a routerLink="/volunteer">Voluntariat</a></li>
             <li><a routerLink="/contact">Contact</a></li>
