--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,7 +32,7 @@
         Implica-te
       </button>
       <mat-menu #getInvolvedMenu="matMenu">
-        <a mat-menu-item routerLink="/get-involved/adopt">Adopta</a>
+        <a mat-menu-item routerLink="/get-involved/adopt">Adopta Virtual</a>
         <a mat-menu-item routerLink="/get-involved/volunteer">Voluntariat</a>
       </mat-menu>
 
